hphp/test/quick/memoize_lsb/memoize_lsb_on_function.php.expectf
Fatal error: `<<__MemoizeLSB>>` and `<<__PolicyShardedMemoizeLSB>>` can only be applied to methods in %s on line 4
